# nixless-pkgs

./: CHANGELOG.md  README.md  flake.nix  nixless-pkgs.cabal
app/: Main.hs
bootstrap/: compiler_stage0.c  hello.c  tcc
bootstrap/lib/: base.h
cbits/: wrapper.c
src/Nix/Bindings/: Ffi.hs  Safe.hs
src/Nix/Bindings/Safe/: Builtins.hs  Derivation.hs  Error.hs  Internal.hs  Store.hs
src/Nix/Bindings/Safe/Internal/: ContextString.hs  FfiWrappers.hs  Value.hs
